--- a/atletismo/package.json
+++ b/atletismo/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "chart.js": "^2.9.4",
     "moment": "^2.29.3",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
